# ArchipelagoDiscordBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
docs/superpowers/plans/: 2026-04-22-archipelago-discord-bot.md
docs/superpowers/specs/: 2026-04-22-archipelago-discord-bot-design.md
src/archibot/: __init__.py  config.py  events.py
src/archibot/archipelago/: __init__.py  client.py  protocol.py
src/archibot/discord_layer/: __init__.py  bot.py  embeds.py  permissions.py
src/archibot/discord_layer/cogs/: __init__.py  linking.py  moderation.py  tracking.py
src/archibot/persistence/: crypto.py  db.py  muted_slots.py  raspberry_counts.py  sessions.py  slot_links.py
src/archibot/session/: __init__.py  formatter.py  manager.py  tracker_session.py
tests/: conftest.py  test_config.py
tests/archipelago/: __init__.py  test_client.py  test_protocol.py
tests/discord_layer/: __init__.py  test_linking.py  test_moderation.py  test_tracking.py
tests/fixtures/: __init__.py  ap_frames.py
tests/persistence/: test_crypto.py  test_db.py  test_muted_slots.py  test_raspberry_counts.py  test_sessions.py  test_slot_links.py
tests/session/: test_formatter.py  test_manager.py  test_tracker_session.py
